Gb3-812: fix button on mobile by manually setting the width and height of the icon

--- a/src/app/map/components/map-controls/map-rotation-button/map-rotation-button.component.scss
+++ b/src/app/map/components/map-controls/map-rotation-button/map-rotation-button.component.scss
@@ -17,5 +17,10 @@
   &--mobile {
     @include mixins.tool-button;
     padding: 0;
+
+    .mat-icon {
+      height: 24px;
+      width: 24px;
+    }
   }
 }
